--- a/.envfile
+++ b/.envfile
@@ -2,3 +2,5 @@ RDS_HOSTNAME='localhost'
 RDS_PORT='3000'
 RDS_USERNAME='root'
 RDS_PASSWORD='secretgarden'
+REDIS_HOSTNAME='redis.tpqptz.0001.aps1.cache.amazonaws.com:6379'
+REDIS_PORT='6379'
